# quacktokenscope

./: .gitignore  Makefile  README.md  pyproject.toml
config/: quack_config.yaml.template
src/education/: visualization.py
src/education/challenges/: token_challenge.py
src/education/cli/: calculate_cost.py  challenge.py  tutorial.py
src/education/tutorial/: base.py  unit2.py  unit6.py  unit8.py
src/quacktokenscope/: __init__.py  cli.py  config.py  demo_cli.py  plugin.py  protocols.py  version.py
src/quacktokenscope/commands/: __init__.py  education_cli.py  token_cli.py
src/quacktokenscope/education/: __init__.py  cost_calculator.py  language_model.py  visualization.py
src/quacktokenscope/education/challenges/: __init__.py  token_challenge.py  what_if.py
src/quacktokenscope/education/cli/: __init__.py  calculate_cost.py  challenge.py  language_model.py  tutorial.py  visualize.py
src/quacktokenscope/education/tutorial/: __init__.py  unit1.py  unit3.py  unit4.py  unit5.py  unit7.py
src/quacktokenscope/outputs/: __init__.py  exporter.py
src/quacktokenscope/plugins/: __init__.py  plugin_factory.py  token_scope.py
src/quacktokenscope/schemas/: __init__.py  token_analysis.py
src/quacktokenscope/utils/: __init__.py  frequency.py  reverse_mapping.py
src/quacktokenscope/utils/tokenizers/: __init__.py  base.py  huggingface_tokenizer.py  sentencepiece_tokenizer.py  tiktoken_tokenizer.py
